k8s/05-sensor-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-generator
  namespace: smart-greenhouse
  labels:
    app: sensor-generator
    tier: iot-sensors
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor-generator
  template:
    metadata:
      labels:
        app: sensor-generator
    spec:
      containers:
        - name: sensor-generator
          image: sensor-generator:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
